Fix bug that allowed to jump forward without filling one of the fields

--- a/src/components/styles/Button.css
+++ b/src/components/styles/Button.css
@@ -19,3 +19,7 @@
   float: right;
   border-radius: 5px;
 }
+
+button:disabled {
+  background: #EAEAEA;
+}
